istio/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: myappgateway
spec:
  selector:
    istio: ingressgateway # use istio default controller
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: myapp
spec:
  hosts:
  - "*"
  gateways:
  - myappgateway
  http:
  - match:
    - uri:
        exact: /user
    - uri:
        exact: /probe
    route:
    - destination:
        host: crudbackend
        port: 
          number: 80
        subset: v1
      weight: 50
    - destination:
        host: crudbackend
        port:
          number: 80
        subset: v2
      weight: 50
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: crudbackend
spec:
  host: crudbackend
  subsets:
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
